<resources>
    <string name="app_name">Week2</string>
    <string name="hnt">hnt</string>
    <string name="fashion_amp_style"><![CDATA[Fashion & Style]]></string>
    <string name="sport">Sport</string>
    <string name="arts">Arts</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="sort">Sort</string>
    <string name="x">X</string>
    <string name="begin_date">Begin Date</string>
    <string name="save">Save</string>
    <string-array name="listSort">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
