<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp">

    <TextView
            android:id="@+id/txtBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="35dp"
            android:layout_marginEnd="15dp"/>

    <EditText
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/edtDate"
            android:focusableInTouchMode="false"
            android:layout_marginLeft="93dp"
    />



    <TextView
            android:id="@+id/txtSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:layout_below="@id/txtBegin"
            android:textSize="16sp"
            android:layout_marginBottom="35dp"/>

    <Spinner
            android:id="@+id/spinnerSort"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_below="@id/txtBegin"
            android:layout_toEndOf="@id/txtBegin"
            android:layout_marginBottom="20dp"
            android:entries="@array/listSort"
    >

    </Spinner>

    <TextView
            android:id="@+id/txtNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_values"
            android:lines="2"
            android:maxEms="5"
            android:textSize="16sp"
            android:layout_below="@id/txtSort"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/arts"
              android:id="@+id/ckbArts"
              android:layout_below="@id/spinnerSort"
              android:layout_toEndOf="@id/txtBegin"
    />


    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/fashion_amp_style"
              android:id="@+id/ckbFashion"
              android:layout_below="@id/ckbArts"
              android:layout_toEndOf="@id/txtBegin"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/sport"
              android:id="@+id/ckbSports"
              android:layout_below="@id/ckbFashion"
              android:layout_toEndOf="@id/txtBegin"/>


    <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_below="@id/ckbSports"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="26dp"/>

</RelativeLayout>